# password-cracking

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  rustfmt.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  ci.yml  release-drafter.yml  release.yml
docs/: CI-CD.md  DEVELOPMENT.md  OFFICE_IMPLEMENTATION.md  PDF_IMPLEMENTATION.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  USER_GUIDE.md  ZIP_IMPLEMENTATION.md
docs/superpowers/specs/: 2026-06-30-full-rewrite-design.md
examples/: .gitignore  README.md  create_test_files.py  pyproject.toml  test.docx  test.pptx  test.xlsx
hooks/: pre-commit
scripts/: README.md  check-large-files.sh  fmt.sh  install-hooks.sh  release.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cracker/: mod.rs
src/engine/: mod.rs
src/formats/: archive.rs  mod.rs  office.rs  pdf.rs  zip.rs  zip_crypto.rs
src/generator/: brute_force.rs  dictionary.rs  mod.rs
src/generators/: brute_force.rs  dictionary.rs  mod.rs  rules.rs
src/utils/: mod.rs
wordlists/: chinese-common.txt  common-passwords.txt  pins-4digit.txt  pins-6digit.txt
