[package]
name = "password-cracking"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
anyhow = "1.0"

# ZIP解密
zip = { version = "2.2", features = ["aes-crypto"] }

# 密码学（当前使用的）
sha2 = "0.10"

# 其他工具
crossbeam-channel = "0.5"
num_cpus = "1.16"

# === 未使用的依赖（暂时保留以备将来使用） ===
# PDF解密
# lopdf = "0.33"

# ZIP解密（额外的）
# byteorder = "1.5"
# crc32fast = "1.4"

# Office文档解密
# calamine = "0.26"  # Excel读取
# cfb = "0.10"  # 复合文档格式

# 密码学（额外的）
# sha1 = "0.10"
# aes = "0.8"
# cipher = "0.4"
# pbkdf2 = "0.12"
# hmac = "0.12"
# md5 = "0.7"

# 其他工具（额外的）
# hex = "0.4"
# base64 = "0.22"
# tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# 测试依赖
[dev-dependencies]
tempfile = "3.12"

# Release优化配置
[profile.release]
opt-level = 3
lto = "thin"  # 改用thin LTO，编译更快，性能差异不大
codegen-units = 1
panic = "abort"
