[package]
name = "password-cracking"
version = "0.2.0"
edition = "2024"
description = "High-performance document password cracker"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "cargo"] }

# Concurrency
rayon = "1.12"
crossbeam-channel = "0.5"
num_cpus = "1.17"

# Progress
indicatif = "0.18"

# Errors
anyhow = "1.0"
thiserror = "2.0"

# ZIP
zip = { version = "8.6", default-features = false, features = ["aes-crypto", "deflate"] }

# Crypto: hashes
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
hmac = "0.13"
pbkdf2 = "0.13"

# Crypto: ciphers
aes = "0.9"
cbc = "0.2"
ecb = "0.1"
rc4 = "0.2"
cipher = { version = "0.5", features = ["alloc", "block-padding"] }

# CRC
crc32fast = "1.5"

# OLE compound files (old Office .doc/.xls/.ppt)
cfb = "0.14"

# Memory-mapped files (large wordlists)
memmap2 = "0.9"

# Utils
humansize = "2.1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
